--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "book-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ryozooky02.github.io/React-Todos-app/",
+  "homepage": "https://ryozooky02.github.io/React-Todos-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
     "firebase": "^10.1.0",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
